--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,10 +1,14 @@
 <div>
-  <h1>Current Tasks</h1>
-    <form ng-submit="addTask(newTaskItem)">
-      <input ng-model="newTaskItem">
-      <button type="submit">add task</button>
+  <h3>Current Tasks</h3>
+    <form class="form-inline" ng-submit="addTask(newTaskItem)">
+      <div class ="form-group">
+        <input class="form-control" placeholder="What do I need to do?" ng-model="newTaskItem">
+      </div>
+      <button type="submit" class="btn btn-default">add</button>   
     </form>
-    <ul>
-      <li ng-repeat="task in tasks">{{task.task}}</li>
+   <div>
+    <ul class="list-group"> 
+      <li class="list-group-item"  ng-repeat="task in tasks">{{task.task}}</li>
     </ul>
+   </div> 
 </div>
