--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -6,9 +6,13 @@
       </div>
       <button type="submit" class="btn btn-default">add</button>   
     </form>
-   <div>
+   <div ng-repeat="task in tasks">
     <ul class="list-group"> 
-      <li class="list-group-item"  ng-repeat="task in tasks">{{task.task}}</li>
+      <li class="list-group-item">{{task.task}}<input type="checkbox" class="checkbox"></li>
     </ul>
    </div> 
 </div>
+
+
+
+
