--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,9 +1,9 @@
 <div>
   <h3>Current Tasks</h3>
-    <form class="form-inline" ng-submit="addTask(newTaskItem)">
+    <form class="form-inline" ng-submit="addTask(newTaskItem)">     
       <div class ="form-group">
-        <input class="form-control" placeholder="What do I need to do?" ng-model="newTaskItem">
-      </div>
+        <input type="text" class="form-control" placeholder="What do I need to do?" ng-model="newTaskItem">
+      </div>          
       <button type="submit" class="btn btn-default">add</button>   
     </form>
    <div ng-repeat="task in tasks">
