Tasks can be marked as complete and can be seen in the completed view

--- a/public/templates/completed.html
+++ b/public/templates/completed.html
@@ -1,9 +1,14 @@
-
 <div>
-  <h1>Task History</h1>
-  <div>
-    <ul>
-      <li ng-repeat="task in tasks" ng-show="">{{task.task}}</li> <!--show completed tasks-->
+  <h3>Completed Tasks</h3>
+   <div ng-repeat="task in tasks">
+    <ul class="list-group"> 
+      <li class="list-group-item" ng-show="task.state == 'complete'">
+        {{task.task}}
+        <input type="checkbox" class="checkbox" ></li>
     </ul>
-  </div>
+   </div> 
 </div>
+
+
+
+
