--- a/public/templates/expired.html
+++ b/public/templates/expired.html
@@ -4,7 +4,8 @@
     <ul class="list-group"> 
       <li class="list-group-item" ng-show="task.state == 'expired'">
         {{task.task}}
-        <input type="checkbox" class="checkbox" ></li>
+        <button class="button expired">!</button>
+      </li>
     </ul>
    </div> 
 </div>
