--- a/public/templates/active.html
+++ b/public/templates/active.html
@@ -7,10 +7,10 @@
       <button type="submit" class="btn btn-default">add</button>   
     </form>
    <div ng-repeat="task in tasks">
-    <ul class="list-group"> 
-      <li class="list-group-item"  ng-show="task.state == 'active'" ng-init="expireTask(task.$id)">
+    <ul> 
+      <li class="todo" ng-show="task.state == 'active'">
         {{task.task}} 
-        <input type="checkbox" class="checkbox" ng-click="completeTask(task.$id)">
+        <button class="button check"  ng-click="completeTask(task.$id)"></button>
       </li>
     </ul>
    </div> 
