--- a/public/templates/completed.html
+++ b/public/templates/completed.html
@@ -4,7 +4,7 @@
     <ul class="list-group"> 
       <li class="list-group-item" ng-show="task.state == 'complete'">
         {{task.task}}
-        <button class="button completed">&#10004</button>
+        <button class="button completed">✔</button>
       </li>
     </ul>
    </div> 
